--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,11 @@ Uploaders: Jerome Benoit <calculus@rezozer.net>
 Build-Depends:
  debhelper (>= 9), autotools-dev, libtool, dh-autoreconf, pkg-config, help2man,
  zlib1g-dev, libgmp-dev
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Homepage: http://pallini.di.uniroma1.it
 Vcs-Git: git://anonscm.debian.org/debian-science/packages/nauty.git
 Vcs-Browser: http://anonscm.debian.org/?p=debian-science/packages/nauty.git
+XS-Autobuild: yes
 
 Package: libnauty2
 Provides: libnauty
