Imported Debian pre-patch 2.6r3+ds-0

--- a/debian/rules
+++ b/debian/rules
@@ -20,4 +20,4 @@ override_dh_strip:
 	dh_strip --dbg-package=libnauty2-dbg
 
 get-orig-source:
-	uscan --no-conf --download-current-version --verbose
+	uscan --no-conf --download-current-version --compression xz --verbose
