Imported Debian patch 2.6r5+ds-1

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,2 +1,6 @@
+Tests: make-check
+Restrictions: needs-recommends
+Depends: nauty, tcc
+
 Tests: build-examples
 Depends: nauty-doc, libnauty2-dev, build-essential, pkg-config
