--- a/gtools-h.in
+++ b/gtools-h.in
@@ -1,5 +1,5 @@
 /*****************************************************************************
-* This is the main header file for gtools.  nauty version 2.6.               *
+* This is the main header file for gtools.  nauty version 2.7.               *
 * Subject to the copyright notice in nauty.h.                                *
 * @configure_input@
 *****************************************************************************/
@@ -18,14 +18,14 @@ used, it is necessary to check they are correct.
 #define HAVE_WAIT  @have_wait@          /* wait() exists */
 #define HAVE_WAIT_H  @header_sys_wait_h@     /* <sys/wait.h> exists */
 #define HAVE_POPEN  @have_popen@          /* popen() and pclose() exist */
-#define POPEN_DEC  @popen_dec@         /* popen() is declared in stdio.h */
-#define FTELL_DEC  @ftell_dec@         /* ftell() is declared in stdio.h */
-#define FDOPEN_DEC  @fdopen_dec@        /* fdopen() is declared in stdio.h */
+#define POPEN_DEC  @popen_dec@         /* popen() is declared */
+#define FTELL_DEC  @ftell_dec@         /* ftell() is declared */
+#define FDOPEN_DEC  @fdopen_dec@        /* fdopen() is declared */
 #define SORTPROG  "@sort_prog@"         /* name of sort program */
 #define SORT_NEWKEY @sort_newparams_ok@  /* if -k is supported */
 #define HAVE_PID_T @have_pid_t@    /* pid_t is defined */
-#define PUTENV_DEC @putenv_dec@   /* putenv() is declared in stdlib.h */
-#define SETENV_DEC @setenv_dec@   /* setenv() is declared in stdlib.h */
+#define PUTENV_DEC @putenv_dec@   /* putenv() is declared */
+#define SETENV_DEC @setenv_dec@   /* setenv() is declared */
 #define HAVE_PUTENV @have_putenv@   /* putenv() exists */
 #define HAVE_SETENV @have_setenv@   /* setenv() exists */
 #define HAVE_FORK @have_fork@   /* fork() exists */
@@ -69,7 +69,7 @@ used, it is necessary to check they are correct.
 extern int errno;
 #endif
 
-#if HAVE_WAIT_H
+#if HAVE_WAIT_H && !defined(AVOID_SYS_WAIT_H)
 #include <sys/wait.h>
 #endif
 
@@ -160,6 +160,7 @@ int setenv(const char*,const char*,int);
 #define NOLIMIT (MAXARG+31L)
 
 #define SWBOOLEAN(c,boool) if (sw==c) boool=TRUE;
+#define SWCOUNT(c,count) if (sw==c) ++count;
 #define SWINT(c,boool,val,id) if (sw==c) \
         {boool=TRUE;arg_int(&arg,&val,id);}
 #define SWLONG(c,boool,val,id) if (sw==c) \
@@ -170,14 +171,25 @@ int setenv(const char*,const char*,int);
         {boool=TRUE;arg_double(&arg,&val,id);}
 #define SWREALRANGE(c,sep,boool,val1,val2,id) if (sw==c) \
 	{boool=TRUE;arg_doublerange(&arg,sep,&val1,&val2,id);}
-#define SWSEQUENCE(c,sep,boool,val,maxval,numvals,id) if (sw==c) \
-        {boool=TRUE;arg_sequence(&arg,sep,val,maxval,&numvals,id);}
+#define SWSEQUENCE(c,sep,boool,val,maxvals,numvals,id) if (sw==c) \
+        {boool=TRUE;arg_sequence(&arg,sep,val,maxvals,&numvals,id);}
+#define SWSEQUENCEMIN(c,sep,boool,val,minvals,maxvals,numvals,id) if (sw==c) \
+        {boool=TRUE;arg_sequence_min(&arg,sep,val,minvals,maxvals,&numvals,id);}
 
+#ifdef HELPUSECMD
+#ifdef HELPTEXT2 
+#define PUTHELPTEXT printf("\nUsage: %s %s\n\n%s",argv[0],USAGE,HELPTEXT1);\
+		    printf("%s",HELPTEXT2);
+#else
+#define PUTHELPTEXT printf("\nUsage: %s %s\n\n%s",argv[0],USAGE,HELPTEXT)
+#endif
+#else
 #ifdef HELPTEXT2 
 #define PUTHELPTEXT printf("\nUsage: %s\n\n%s",USAGE,HELPTEXT1);\
 		    printf("%s",HELPTEXT2);
 #else
 #define PUTHELPTEXT printf("\nUsage: %s\n\n%s",USAGE,HELPTEXT)
+#endif
 #endif
 
 #define HELP if (argc > 1 && (strcmp(argv[1],"-help")==0 \
@@ -258,6 +270,7 @@ extern int doublevalue(char**,double*);
 extern void arg_double(char**,double*,char*);
 extern void arg_doublerange(char**,char*,double*,double*,char*);
 extern void arg_sequence(char**,char*,long*,int,int*,char*);
+extern void arg_sequence_min(char**,char*,long*,int,int,int*,char*);
 
 extern void writerange(FILE*,int,long,long);
 extern void gt_abort(const char*);
