--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: nauty
 Section: math
 Priority: optional
 Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
-Uploaders: Jerome Benoit <calculus@rezozer.net>
+Uploaders: Jerome Benoit <calculus@rezozer.net>,
+           Doug Torrance <dtorrance@piedmont.edu>
 Build-Depends:
  debhelper (>= 10), libtool, pkg-config, help2man,
  zlib1g-dev, libgmp-dev
