--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Build-Depends: debhelper-compat (= 13),
                zlib1g-dev
 Standards-Version: 4.5.0
 Homepage: http://pallini.di.uniroma1.it
-Vcs-Git: https://anonscm.debian.org/git/debian-science/packages/nauty.git
-Vcs-Browser: https://anonscm.debian.org/cgit/debian-science/packages/nauty.git
+Vcs-Git: https://salsa.debian.org/science-team/nauty.git
+Vcs-Browser: https://salsa.debian.org/science-team/nauty
 
 Package: libnauty2
 Provides: libnauty
