--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Standards-Version: 4.5.0
 Homepage: https://pallini.di.uniroma1.it
 Vcs-Git: https://salsa.debian.org/science-team/nauty.git
 Vcs-Browser: https://salsa.debian.org/science-team/nauty
+Rules-Requires-Root: no
 
 Package: libnauty2
 Provides: libnauty
