debian/tests/control: Add libc6-dev to make-check Depends.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,5 +1,5 @@
 Tests: make-check
-Depends: nauty, tcc
+Depends: nauty, tcc, libc6-dev
 
 Tests: build-examples
 Depends: nauty-doc, libnauty2-dev, build-essential, pkg-config
