--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,8 @@ case "$build" in
 esac
 
 AC_PATH_PROG([HELP2MAN],[help2man])
+AM_CONDITIONAL([HAVE_HELP2MAN], [test x$HELP2MAN != x])
+
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
