Add suffix to version number

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT([nauty],[2.7.1],[bdm@cs.anu.edu.au],[nauty],[http://pallini.di.uniroma1.it/])
+AC_INIT([nauty],[2.7.1+ds+sage-2020-08-01],[bdm@cs.anu.edu.au],[nauty],[http://pallini.di.uniroma1.it/])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([autotool])
 AC_CONFIG_SRCDIR([dreadnaut.c])
@@ -7,10 +7,11 @@ AC_CONFIG_HEADER([nauty/nauty_config.h])
 AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE
 
-LIBNAUTY_VERSION_MAJOR=${PACKAGE_VERSION%%.*}
-LIBNAUTY_VERSION_MINOR=${PACKAGE_VERSION#*.}
+PACKAGE_VERSION_MAJOR_MINOR_MICRO=${PACKAGE_VERSION%%+*}
+LIBNAUTY_VERSION_MAJOR=${PACKAGE_VERSION_MAJOR_MINOR_MICRO%%.*}
+LIBNAUTY_VERSION_MINOR=${PACKAGE_VERSION_MAJOR_MINOR_MICRO#*.}
 LIBNAUTY_VERSION_MINOR=${LIBNAUTY_VERSION_MINOR%%.*}
-LIBNAUTY_VERSION_MICRO=${PACKAGE_VERSION##*.}
+LIBNAUTY_VERSION_MICRO=${PACKAGE_VERSION_MAJOR_MINOR_MICRO##*.}
 LIBNAUTY_LT_VERSION="$(expr ${LIBNAUTY_VERSION_MAJOR} + ${LIBNAUTY_VERSION_MINOR}):${LIBNAUTY_VERSION_MICRO}:${LIBNAUTY_VERSION_MINOR}"
 
 AC_SUBST(LIBNAUTY_VERSION_MAJOR)
